[gd_scene load_steps=3 format=3 uid="uid://cja63mf1ulnpi"]

[ext_resource type="Theme" uid="uid://dxbr2pe0xoeby" path="res://assets/theme/main_theme.tres" id="1_ttnuf"]
[ext_resource type="Script" uid="uid://bb5evq4hnidap" path="res://merc_options/recruting/role_and_background_selector.gd" id="2_2anrf"]

[node name="RoleAndBackgroundSelector" type="HBoxContainer"]
offset_right = 49.0
offset_bottom = 10.0
theme = ExtResource("1_ttnuf")
script = ExtResource("2_2anrf")

[node name="RolesMenu" type="OptionButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0

[node name="BackgroundsMenu" type="OptionButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0

[connection signal="item_selected" from="RolesMenu" to="." method="_on_roles_menu_item_selected"]
[connection signal="item_selected" from="BackgroundsMenu" to="." method="_on_backgrounds_menu_item_selected"]
